Fixed svg img bug on firefox

--- a/assets/scss/modules/project-details.scss
+++ b/assets/scss/modules/project-details.scss
@@ -159,6 +159,7 @@
           flex-grow: 1;
         }
         .img-project {
+          min-width: 150px;
           height: 100%;
           width: 100%;
           max-height: 100%;
